force-app/main/default/objects/EYI_Project__c/fields/EYI_Ready_Recknkor__c.field-meta.xml
<CustomField>
    <fullName>EYI_Ready_Recknkor__c</fullName>
    <label>Ready Recknkor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>