force-app/main/default/objects/EYI_Project__c/fields/EYI_Ready_Recknkor_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Ready_Recknkor_Percentage__c</fullName>
    <description>It will calculate based on the Ready Recknkor and used on Inventory total calculation</description>
    <label>Ready Recknkor Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>