force-app/main/default/objects/EYI_Project__c/fields/EYI_Release_Unit_Hours__c.field-meta.xml
<CustomField>
    <fullName>EYI_Release_Unit_Hours__c</fullName>
    <label>Release Unit Hours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>