force-app/main/default/objects/EYI_Project__c/fields/EYI_Rera_Carpet_Area_In_Sq_Mtr__c.field-meta.xml
<CustomField>
    <fullName>EYI_Rera_Carpet_Area_In_Sq_Mtr__c</fullName>
    <label>Rera Carpet Area In Sq Mtr</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>