force-app/main/default/objects/EYI_Project__c/fields/EYI_Rera_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Rera_Number__c</fullName>
    <label>Rera Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>