force-app/main/default/objects/EYI_Project__c/fields/EYI_Sales_District__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_District__c</fullName>
    <label>Sales District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IN0001</fullName>
                <label>Pune</label>
            </value>
            <value>
                <fullName>IN0002</fullName>
                <label>Mumbai</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>