force-app/main/default/objects/EYI_Project__c/fields/EYI_Sales_Group__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Group__c</fullName>
    <label>Sales Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100</fullName>
                <label>Mumbai Sales Group</label>
            </value>
            <value>
                <fullName>101</fullName>
                <label>Pune Sales Group</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>Delhi Sales Group</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>