force-app/main/default/objects/EYI_Project__c/fields/EYI_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sales_Office__c</fullName>
    <label>Sales Office</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1000</fullName>
                <label>Mumbai Office</label>
            </value>
            <value>
                <fullName>1001</fullName>
                <label>Pune Office</label>
            </value>
            <value>
                <fullName>1003</fullName>
                <label>WTC Pune</label>
            </value>
            <value>
                <fullName>1004</fullName>
                <label>YOO Pune</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>