force-app/main/default/objects/EYI_Project__c/fields/EYI_SAP_Comp__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Comp__c</fullName>
    <label>SAP Comp</label>
    <length>50</length>
    <type>Text</type>
</CustomField>