force-app/main/default/objects/EYI_Project__c/fields/EYI_SAP_Company_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Company_Code__c</fullName>
    <label>SAP Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>