force-app/main/default/objects/EYI_Project__c/fields/EYI_SAP_Salesorg__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Salesorg__c</fullName>
    <label>SAP Sales-org</label>
    <length>20</length>
    <type>Text</type>
</CustomField>