force-app/main/default/objects/EYI_Project__c/fields/EYI_SAPMaterial_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAPMaterial_Code__c</fullName>
    <label>SAPMaterial Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>