force-app/main/default/objects/EYI_Project__c/fields/EYI_Sinking_Fund_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sinking_Fund_Sq_Ft__c</fullName>
    <label>Corpus Deposit (PSM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>