force-app/main/default/objects/EYI_Project__c/fields/EYI_Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>EYI_Stamp_Duty__c</fullName>
    <label>Stamp Duty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>