force-app/main/default/objects/EYI_Project__c/fields/EYI_Sub_Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sub_Asset_Class__c</fullName>
    <label>Sub Asset Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EYI_Asset_Class__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plot</fullName>
            </value>
            <value>
                <fullName>Villa</fullName>
            </value>
            <value>
                <fullName>Apartment</fullName>
            </value>
            <value>
                <fullName>Business Unit</fullName>
            </value>
            <value>
                <fullName>Retail and F&amp;B</fullName>
            </value>
            <value>
                <fullName>Office Space</fullName>
            </value>
            <value>
                <fullName>Business Units</fullName>
                <isActive>false</isActive>
                <label>Business Units</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>