force-app/main/default/objects/EYI_Project__c/fields/EYI_Target_Percentage__c.field-meta.xml
<CustomField>
    <fullName>EYI_Target_Percentage__c</fullName>
    <description>Target percentage for total outstanding amount</description>
    <label>Target Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>