force-app/main/default/objects/EYI_Project__c/fields/EYI_TDS_Charge__c.field-meta.xml
<CustomField>
    <fullName>EYI_TDS_Charge__c</fullName>
    <label>TDS Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>