force-app/main/default/objects/EYI_Project__c/fields/EYI_Title__c.field-meta.xml
<CustomField>
    <fullName>EYI_Title__c</fullName>
    <description>This field is used to capture Project code, and we are using this code identifier to update project budgets.</description>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>