force-app/main/default/objects/EYI_Project__c/fields/EYI_Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Budget__c</fullName>
    <description>This field is used to store total budget cost of project. This value will be capture from SAP.</description>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>