force-app/main/default/objects/EYI_Project__c/fields/EYI_Total_Car_Park__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Car_Park__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Total Car Park</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>