force-app/main/default/objects/EYI_Project__c/fields/EYI_Total_Sold_Car_Parks__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Sold_Car_Parks__c</fullName>
    <label>Total Sold Car Parks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>