force-app/main/default/objects/EYI_Project__c/fields/EYI_Utilized_Budget__c.field-meta.xml
<CustomField>
    <fullName>EYI_Utilized_Budget__c</fullName>
    <description>This field is custom rollup from Campaign to Project for sum up of utilized budget</description>
    <label>Utilized Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>