force-app/main/default/objects/EYI_Project__c/fields/EYI_Walkthrough_Link__c.field-meta.xml
<CustomField>
    <fullName>EYI_Walkthrough_Link__c</fullName>
    <label>Walkthrough Link</label>
    <type>Url</type>
</CustomField>