force-app/main/default/objects/EYI_Project__c/fields/EYI_Zone__c.field-meta.xml
<CustomField>
    <fullName>EYI_Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pune City</fullName>
            </value>
            <value>
                <fullName>PCMC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>