force-app/main/default/objects/EYI_Project__c/recordTypes/Residential_and_Commercial.recordType-meta.xml
<RecordType>
    <fullName>Residential_and_Commercial</fullName>
    <active>true</active>
    <label>Residential and Commercial</label>
</RecordType>