force-app/main/default/objects/EYI_Project__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>EYI_Project_Code__c</columns>
    <columns>EYI_Asset_Class__c</columns>
    <columns>EYI_Sub_Asset_Class__c</columns>
    <columns>EYI_Residential_Type__c</columns>
    <columns>EYI_Project_Property_Type__c</columns>
    <columns>EYI_SAP_Company_Code__c</columns>
    <columns>EYI_Charge_Value_3__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>